basic profile done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1>Student Bio</h1>
+    <h2>Joe Rehfuss</h2>
+    <img src="https://via.placeholder.com/200" alt="gray fake image">
+    <br>
+    <p>I'm baby unicorn godard XOXO crucifix keytar jianbing semiotics occupy. Kitsch af austin venmo unicorn.
+        Fingerstache salvia synth banjo taiyaki. Crucifix ethical mixtape copper mug af celiac cornhole iPhone keffiyeh
+        dreamcatcher. Squid XOXO everyday carry flexitarian woke poutine kickstarter iceland jean shorts fashion axe.
+        Air plant cliche live-edge tousled bicycle rights single-origin coffee. Marfa lumbersexual taxidermy pug neutra
+        ennui.</p>
+
+    <p> Hexagon PBR&B scenester YOLO hell of four loko fixie microdosing DIY chillwave iPhone mixtape gochujang
+        bushwick. Bushwick art party kickstarter, banjo franzen occupy fam iceland la croix kale chips whatever
+        messenger bag quinoa. Wayfarers palo santo taiyaki VHS kickstarter cold-pressed cloud bread fam chillwave. Ennui
+        tote bag pabst, direct trade poke cornhole banjo woke heirloom tumblr leggings irony umami tumeric. Pinterest
+        woke artisan shaman 8-bit wolf. Hoodie put a bird on it glossier, cloud bread wolf forage coloring book
+        pinterest tilde air plant plaid echo park pour-over. Woke health goth affogato banjo keffiyeh you probably
+        haven't heard of them thundercats art party viral forage.
+        PBR&B vice ugh tacos next level edison bulb, kickstarter leggings twee salvia vinyl slow-carb direct trade
+        hoodie. Shabby chic neutra ennui tumeric, tousled brooklyn flannel before they sold out asymmetrical post-ironic
+        tattooed iceland. Health goth snackwave cray VHS raclette flexitarian celiac chia. Portland microdosing
+        typewriter DIY, asymmetrical af everyday carry dreamcatcher fanny pack pop-up celiac cloud bread put a bird on
+        it.
+        Dummy text? More like dummy thicc text, amirite?</p>
+        <h2>Contact Info:</h2>
+        <ul>
+            <li><strong>Email</strong> <a href="mailto: fake@email.com">Fake email</a> </li>
+            <li><strong>github</strong> <a href="https://www.github.com">Github</a> </li>
+            <li><strong>portfolio</strong> <a href="http://www.joerehfuss.com"> portfolio</a> </li>
+        </ul>
 </body>
+
 </html>
